# luminafast

./: .eslintignore  .gitignore  .prettierignore  .rustfmt.toml  AGENTS.md  Makefile  README-SITE-MAINTENANCE.md  _config.yml  clippy.toml  eslint.config.js  index.html  index.md  package-lock.json  package.json  rust-toolchain.toml  src-test-tauri.html  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.local.ts  vitest.config.ts
.github/: AGENTS.md  README.md  copilot-instructions.md
.github/agents/: Explore.agent.md  Master-Validator.agent.md  adr-generator.agent.md  agents de test.agent.md  code-review.agent.md  codemap.agent.md  context-architect.agent.md  documentation-sync.agent.md  double-check-review.agent.md  gem-documentation-writer.agent.md  gem-orchestrator.agent.md  gem-planner.agent.md  phase-implementation.agent.md  pr-verification.agent.md  principal-software-engineer.agent.md  ux-ui-auditor.agent.md
.github/workflows/: ci.yml  update-site.yml
.obsidian/: workspace.json
Docs/: ACTION_PLAN.md  ACTION_PLAN_POST_AUDIT.md  AGENTS.md  AI_INSTRUCTIONS.md  APP_DOCUMENTATION.md  AUDIT_MVP.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CHANGELOG_INSTRUCTION_TEMPLATE.md  CHANGELOG_SEARCH_INDEX.md  CODE_REVIEW_2026-02-15.md  CODE_REVIEW_SUMMARY.md  CONFORMITE_PLAN_PRINCIPAL.md  DEVELOPMENT_SETUP.md  FUTURE_OPTIMIZATIONS.md  GOVERNANCE.md  IMPLEMENTATION_PLAN_TYPES.md  Master-Validator-brief.md  PHASE-4.2-VALIDATION-REPORT.md  PREVIEW_FORMAT_SELECTION_ANALYSIS.md  README_CODE_REVIEW.md  TESTING_COMPLIANCE_REPORT.md  TESTING_STRATEGY.md  WASM_INTEGRATION_AUDIT.md  dependency.mmd  double-check-review-brief.md
Docs/Maintenance WASM/: BASELINE-WASM-EXPORT-2026-03.md  BRIEF-M0.1-CADRAGE-ROOT-CAUSE.md  BRIEF-M0.2-BASELINE-QUALITE-PERF.md  BRIEF-M0.3-GOUVERNANCE-ROADMAP-BRIEFS.md  BRIEF-M1.1-INIT-CRATE-CORE-IMAGE.md  BRIEF-M1.2-PORTAGE-ALGORITHMES-VERS-CORE.md  BRIEF-M1.3-STABILISATION-API-CORE-V1.md  BRIEF-M2.1-INTEGRATION-WASM-SUR-CORE.md  BRIEF-M2.3-PARITE-VISUELLE-WASM.md  (+16 more)
_includes/: footer.html  hero.html  navigation.html
_layouts/: default.html  documentation.html  feature.html
documentation/: api-reference.md  app-documentation.md  architecture.md  changelog.md  index.md
features/: index.md  phase-0-foundations.md  phase-1-data-layer.md  phase-2-import.md  roadmap.md
installation/: getting-started.md  index.md
luminafast-image-core/: .gitignore  Cargo.toml
luminafast-wasm/: Cargo.toml  README.md
luminafast-wasm/src/: image_processing.rs  lib.rs
scripts/: benchmark-ingestion.sh  build-wasm.sh  check-single-source-image-core.sh  pre-commit.sh  test-workflow.sh  update-site.sh
src/: AGENTS.md  App.jsx  App.jsx.backup  App.jsx.old  App.tsx  index.css  main.tsx
src-tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_ingestion_sessions.sql  003_previews.sql  004_add_folder_online_status.sql  004_smart_collections.sql  005_edit_events.sql  005_event_sourcing.sql  006_edit_snapshots.sql  006_snapshots.sql  007_cache_metadata.sql  007_fix_previews_schema.sql  008_app_settings_table.sql  008_duckdb_tracking.sql
src-tauri/src/: database.rs  error.rs  lib-wasm.rs  lib.rs  main.rs  test_hook.rs
src-tauri/src/cache/: l1.rs  l2.rs  metadata.rs  mod.rs
src-tauri/src/commands/: analytics.rs  cache.rs  catalog.rs  discovery.rs  edit.rs  event_sourcing.rs  exif.rs  export.rs  filesystem.rs  hashing.rs  history.rs  metrics.rs  mod.rs  preview.rs  render.rs  search.rs  settings.rs  snapshots.rs  tags.rs  types.rs  xmp.rs
src-tauri/src/models/: catalog.rs  collection.rs  discovery.rs  dto.rs  edit.rs  event.rs  exif.rs  filesystem.rs  hashing.rs  image.rs  mod.rs  preview.rs  snapshot.rs
src-tauri/src/services/: blake3.rs  cache_integration.rs  cache_metadata.rs  db_repository.rs  discovery.rs  duckdb_service.rs  edit_sourcing.rs  event_sourcing.rs  exif.rs  export_pipeline.rs  export_rendering.rs  filesystem.rs  history_service.rs  image_processing.rs  ingestion.rs  iptc.rs  metrics.rs  mod.rs  preview.rs  preview_db.rs  render_pipeline.rs  search.rs  security.rs  settings.rs  smart_query_parser.rs  snapshot_service.rs  xmp.rs
src-tauri/src/services/discovery/: tests.rs
src-tauri/src/services/ingestion/: tests.rs
src-tauri/src/services/tests/: mod.rs  parity_preview_export.rs  preview_db_integration.rs
src-tauri/src/types/: db_context.rs
src-tauri/src/wasm/: image_processor.rs  mod.rs  utils.rs
src-tauri/tests/: app_integration.rs  cache_integration.rs
(+327 files in other folders)
