[package]
name = "luminafast"
version = "0.1.0"
description = "LuminaFast — Digital Asset Management for Photographers"
authors = ["David Michels"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "luminafast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = ["rustls-tls", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Database dependencies
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
thiserror = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hashing dependencies
blake3 = "1.5"
rayon = "1.10"
tokio = { version = "1.40", features = ["rt-multi-thread", "fs", "io-util", "macros"] }

# Filesystem dependencies
notify = "7.0"
parking_lot = "0.12"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.0"
tauri = { version = "2.9.1", features = ["rustls-tls", "devtools", "test"] }
